fix login spacing

--- a/widget-styles-23-subNav.css
+++ b/widget-styles-23-subNav.css
@@ -6,3 +6,7 @@
     top: 50%;
     transform: translateY(50%);
 }
+
+#loginButton {
+    padding-top: 7px;
+}
